refactor(security, dto): enhance security configuration and update validation constraints